--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express-handlebars": "^5.3.4",
     "express-session": "^1.17.2",
     "mysql2": "^2.3.2",
-    "sequelize": "^6.9.0"
+    "sequelize": "^6.9.0",
+    "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
