--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
 	"homepage": "https://github.com/MickeyPhillips/Project_2#readme",
 	"dependencies": {
 		"@tailwindcss/aspect-ratio": "^0.3.0",
-		"autoprefixer": "^10.4.0",
 		"bcrypt": "^5.0.1",
 		"connect-session-sequelize": "^7.1.2",
 		"dotenv": "^10.0.0",
@@ -29,12 +28,13 @@
 		"express-handlebars": "^5.3.4",
 		"express-session": "^1.17.2",
 		"mysql2": "^2.3.2",
-		"postcss": "^8.3.11",
 		"sequelize": "^6.9.0",
-		"tailwindcss": "^2.2.19",
 		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
-		"nodemon": "^2.0.14"
+		"autoprefixer": "^10.4.0",
+		"nodemon": "^2.0.14",
+		"postcss": "^8.4.4",
+		"tailwindcss": "^3.0.1"
 	}
 }
